--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -34,7 +34,7 @@
     <!-- Menssagem de erro de login (só aparece se as informações estiverem erradas) -->
 
     {% if gerente == 'SIM' %}
-        <h1>Login para gerentes</h1>
+        <div style="text-align:center"><h1>Login para gerentes</h1></div>
     {% endif %}
 
     <!-- Forms provisório -->
