--- a/src/templates/alteraAgencia.html
+++ b/src/templates/alteraAgencia.html
@@ -5,8 +5,134 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alteração de Agencia</title>
+    <link rel="stylesheet" href="../static/styles/styles.css">
+    <script>
+        // pra abrir o menu
+        function abre() {
+        document.getElementById("mySidenav").style.width = "250px";
+        }
+        // pra fechar o menu
+        function fecha() {
+        document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
 </head>
 <body>
-    
+    <div class="topo">
+        <header class="navbar">
+            <div class="menu">
+                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            </div>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                <a href="/homeGerenteGeral">Home</a>
+                <a href="/saque">Saque</a>
+                <a href="/deposito">Deposito</a>
+                <a href="/extrato">Extrato</a>        
+                <a href="//reqMudancaCadastral">Perfil de usuário</a>
+                <a href="/loggout">Sair</a>
+                <br>
+            </div>
+            <a href="/homeGerenteGeral">
+                <img src="../static/public/logo.png" alt="logo">
+            </a>
+            <div class="user">
+                <a href="/reqMudancaCadastral">
+                <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
+            </div>
+        </header>
+    </div>
+    <div class="divtabuser">
+        <div class="dirowuser">
+            <div class="userinfo">
+                <fieldset disabled="disabled">
+                    <br>
+                    <label for="nome_agencia">Nome:</label><br>
+                    <input type="text" name="nome_agencia" value="{{linhaAgencia['nome_agencia']}}"><br>
+                    <label for="numero_agencia">Número agência:</label><br>
+                    <input type="text" name="numero_agencia" value="{{linhaAgencia['numero_agencia']}}"><br>
+                    <label for="rua_avenida_agencia">Avenida/Rua:</label><br>
+                    <input type="text" name="rua_avenida_agencia" value="{{linhaAgencia['rua_avenida_agencia']}}"><br>
+                    <label for="numero_local_agencia">Número do endereço:</label><br>
+                    <input type="text" name="numero_local_agencia", value="{{linhaAgencia['numero_local_agencia']}}"><br>
+                    <label for="bairro_agencia">Bairro:</label><br>
+                    <input type="text" name="bairro_agencia" value="{{linhaAgencia['bairro_agencia']}}"><br>
+                    <label for="cidade_agencia">Cidade:</label><br>
+                    <input type="text" name="cidade_agencia" value="{{linhaAgencia['cidade_agencia']}}"><br>
+                    <label for="estado_agencia">Estado:</label><br>
+                    <input type="text" name="estado_agencia" value="{{linhaAgencia['estado_agencia']}}"><br>
+                    <label for="nome_usuario">Gerente:</label><br>
+                    <input type="text" name="nome_usuario" value="{{linhaUsuario['nome_usuario']}}"><br>
+                    <label for="id_usuario">ID de usuário:</label><br>
+                    <input type="text" name="id_usuario" value="{{linhaUsuario['id_usuario']}}"><br>
+                    <label for="numero_matricula">Número matrícula:</label><br>
+                    <input type="text" name="numero_matricula" value="{{linhaAgencia['numero_matricula']}}"><br>
+
+                    </fieldset>
+            </div>
+            <div class="espaço"></div>
+            <div class="useralt"><br>
+                <form action="#" method="post">
+                    <label for="nome_agencia">Nome:</label><br>
+                    <input type="text" name="nome_agencia" value=""><br>
+                    <label for="numero_agencia">Número agência:</label><br>
+                    <input type="text" name="numero_agencia" value=""><br>
+                    <label for="rua_avenida_agencia">Avenida/Rua:</label><br>
+                    <input type="text" name="rua_avenida_agencia" value=""><br>
+                    <label for="numero_local_agencia">Número do endereço:</label><br>
+                    <input type="text" name="numero_local_agencia", value=""><br>
+                    <label for="bairro_agencia">Bairro:</label><br>
+                    <input type="text" name="bairro_agencia" value=""><br>
+                    <label for="cidade_agencia">Cidade:</label><br>
+                    <input type="text" name="cidade_agencia" value=""><br>
+                    <label for="estado_agencia">Estado:</label><br>
+                    <select name="estado_agencia" id="estado">
+                        <option value=''></option>
+                        <option value="Acre">Acre</option>
+                        <option value="Alagoas">Alagoas</option>
+                        <option value="Amapá">Amapá</option>
+                        <option value="Amazonas">Amazonas</option>
+                        <option value="Bahia">Bahia</option>
+                        <option value="Ceará">Ceará</option>
+                        <option value="Distrito Federal">Distrito Federal</option>
+                        <option value="Espirito Santo">Espirito Santo</option>
+                        <option value="Goiás">Goiás</option>
+                        <option value="Maranhão">Maranhão</option>
+                        <option value="Mato Grosso">Mato Grosso</option>
+                        <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+                        <option value="Minas Gerais">Minas Gerais</option>
+                        <option value="Pará">Pará</option>
+                        <option value="Paraíba">Paraíba</option>
+                        <option value="Paraná">Paraná</option>
+                        <option value="Pernambuco">Pernambuco</option>
+                        <option value="Piauí">Piauí</option>
+                        <option value="Rio de Janeiro">Rio de Janeiro</option>
+                        <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+                        <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+                        <option value="Rondônia">Rondônia</option>
+                        <option value="Roraima">Roraima</option>
+                        <option value="Santa Catarina">Santa Catarina</option>
+                        <option value="São Paulo">São Paulo</option>
+                        <option value="Sergipe">Sergipe</option>
+                        <option value="Tocantins">Tocantins</option>
+                    </select><br>
+                    <!-- <label for="nome_usuario">Gerente:</label>
+                    <input type="text" name="nome_usuario" value="{{linhaUsuario['nome_usuario']}}">
+                    <label for="id_usuario">ID de usuário:</label>
+                    <input type="text" name="id_usuario" value="{{linhaUsuario['id_usuario']}}">
+                    <label for="numero_matricula">Número matrícula:</label>
+                    <input type="text" name="numero_matricula" value="{{linhaAgencia['numero_matricula']}}"> -->
+                    <br><br>
+                
+                    <input type="submit" value="Alterar Dados" id="alterar">
+                    
+                </form>
+            </div>
+        </div>
+    </div>
+    <br>
+    <a href="/alteraGerente" class="voltar"><button> Mudar dados do gerente </button></a>
+    <a href="{{'/encerraConta/%s' % (id_usuario)}}"><input type="button" value="EXCLUIR CONTA" id="deletar"></a>
+    <a href="/agencias" class="voltar"><button> Voltar </button></a>
 </body>
 </html>
