--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -47,6 +47,7 @@
                         {% endif %}
                         <a href="/saque">Saque</a>
                         <a href="/deposito">Deposito</a>
+                        <a href="/transferencia">Transferencia</a>
                         <a href="/extrato">Extrato</a>        
                         <a href="/reqMudancaCadastral">Perfil de usuário</a>
                         <a href="/loggout">Sair</a>
