--- a/src/templates/agencias.html
+++ b/src/templates/agencias.html
@@ -28,6 +28,7 @@
                 <a href="/homeGerenteGeral">Home</a>
                 <a href="/saque">Saque</a>
                 <a href="/deposito">Deposito</a>
+                <a href="/transferencia">Transferencia</a>
                 <a href="/extrato">Extrato</a>        
                 <a href="//reqMudancaCadastral">Perfil de usuário</a>
                 <a href="/loggout">Sair</a>
