Correção no filtro do histórico que havia parado de funcionar com a implementação das transferências

--- a/src/templates/extrato.html
+++ b/src/templates/extrato.html
@@ -14,7 +14,7 @@
     <h2>Número da conta: {{numero_conta}}</h2>
     <h2>Nome: {{nome}}</h2><br>
 
-    <form action="#", method="POST">
+    <form action="", method="POST">
         <input type="datetime-local" name="data_inicio" step="1" required>
         <input type="datetime-local" name="data_fim" step="1" required>
         <input type="submit" value="Filtrar">
