--- a/src/templates/alteraAgencia.html
+++ b/src/templates/alteraAgencia.html
@@ -43,6 +43,11 @@
             </div>
         </header>
     </div>
+    {% with mensagens = get_flashed_messages() %}
+        {% for msg in mensagens %}
+            <p id="confimacaoSenha">{{msg}}</p>
+        {% endfor %}
+    {% endwith %}
     <div class="divtabuser">
         <div class="dirowuser">
             <div class="userinfo">
