--- a/src/templates/criaGerente.html
+++ b/src/templates/criaGerente.html
@@ -5,8 +5,124 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criando Gerente</title>
+    <link rel="stylesheet" href="../static/styles/styles.css">
+    <script>
+        function cpf(i){
+        var v =i.value;
+        if(isNaN(v[v.length-1])){//impede de entrar qualquer coisa além de número
+            i.value = v.substring(0, v.length-1);
+            return;
+    }
+    
+        i.setAttribute("maxlength", "14");
+        if(v.length == 3) i.value += ".";
+        if(v.length == 7) i.value += ".";
+        if(v.length == 11) i.value += "-";
+    }
+    </script>
+        <script>
+            // pra abrir o menu
+            function abre() {
+            document.getElementById("mySidenav").style.width = "250px";
+            }
+            // pra fechar o menu
+            function fecha() {
+            document.getElementById("mySidenav").style.width = "0";
+            }
+        </script>
 </head>
 <body>
-    
+    <div class="topo">
+        <header class="navbar">
+            <div class="menu">
+                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            </div>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                <a href="/homeGerenteGeral">Home</a>
+                <a href="/saque">Saque</a>
+                <a href="/deposito">Deposito</a>
+                <a href="/extrato">Extrato</a>        
+                <a href="//reqMudancaCadastral">Perfil de usuário</a>
+                <a href="/loggout">Sair</a>
+                <br>
+            </div>
+            <a href="/homeGerenteGeral">
+                <img src="../static/public/logo.png" alt="logo">
+            </a>
+            <div class="user">
+                <a href="/reqMudancaCadastral">
+                <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
+            </div>
+        </header>
+    </div>
+    <div>
+        <form action="#" method="post" class="cadastro-form">
+            <h1>Cadastro</h1>
+            {% with mensagens = get_flashed_messages() %}
+                {% for msg in mensagens %}
+                    <br><p id="confimacaoSenha">{{msg}}</p><br>
+                {% endfor %}
+            {% endwith %}
+            <label for="numero_matricula">Número Matricula:</label>
+            <input type="number" name="numero_matricula" required>
+            <label for="nome">Nome:</label><br>
+            <input type="text" name="nome_usuario" required><br>
+            <label for="CPF">CPF:</label><br>
+            <input oninput="cpf(this)" type="text" name='CPF' placeholder="Digite sem os pontos e traços" required><br>
+            <div type="separações" class="separações">Rua ou Avenida:</div>
+            <input type="text" name="rua" placeholder="Rua ou Avenida" required>
+            <div type="separações" class="separações">Número:</div>
+            <input type="text" name="numero" placeholder="Número" required><br>
+            <div type="separações" class="separações">Bairro:</div>
+            <input type="text" name="bairro" placeholder="Bairro" required><br>
+            <div type="separações" class="separações">Cidade:</div>
+            <input type="text" name="cidade" placeholder="Cidade" required>
+            <div type="separações" class="separações">Estado:</div>
+            <select name="estado" id="estado" required>
+                <option value="Acre">Acre</option>
+                <option value="Alagoas">Alagoas</option>
+                <option value="Amapá">Amapá</option>
+                <option value="Amazonas">Amazonas</option>
+                <option value="Bahia">Bahia</option>
+                <option value="Ceará">Ceará</option>
+                <option value="Distrito Federal">Distrito Federal</option>
+                <option value="Espirito Santo">Espirito Santo</option>
+                <option value="Goiás">Goiás</option>
+                <option value="Maranhão">Maranhão</option>
+                <option value="Mato Grosso">Mato Grosso</option>
+                <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+                <option value="Minas Gerais">Minas Gerais</option>
+                <option value="Pará">Pará</option>
+                <option value="Paraíba">Paraíba</option>
+                <option value="Paraná">Paraná</option>
+                <option value="Pernambuco">Pernambuco</option>
+                <option value="Piauí">Piauí</option>
+                <option value="Rio de Janeiro">Rio de Janeiro</option>
+                <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+                <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+                <option value="Rondônia">Rondônia</option>
+                <option value="Roraima">Roraima</option>
+                <option value="Santa Catarina">Santa Catarina</option>
+                <option value="São Paulo">São Paulo</option>
+                <option value="Sergipe">Sergipe</option>
+                <option value="Tocantins">Tocantins</option>
+            </select><br>
+            <label for="datNascimento">Data de Nascimento:</label><br>
+            <input type="date" name="dataNascimento" placeholder="Data de Nascimento" required><br>
+            <label for="genero">Gênero:</label><br>
+            <select name="genero" id="generos" required>
+                <option value="Masculino">Masculino</option>
+                <option value="Feminino">Feminino</option>
+                <option value="Outro">Outro</option>
+                <option value="Prefiro não informar">Prefiro não informar</option>
+            </select><br>
+            <label for="senha">Senha:</label><br>
+            <input type="password" name="senha" placeholder="Até 16 dígitos" maxlength="16" required><br>
+            <label for="senha">Confirmar senha:</label><br>
+            <input type="password" name="senhaConfirma" placeholder="Até 16 dígitos" maxlength="16" required><br>
+            <input type="submit" value="Cadastrar" id="cadastrar">
+        </form>
+    </div>
 </body>
 </html>
