--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -18,6 +18,13 @@
   padding-top: 60px;
 }
 
+#flexbox{
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+
+}
+
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
