--- a/src/templates/agencias.html
+++ b/src/templates/agencias.html
@@ -81,7 +81,9 @@
         {% endfor %}
     </div>
     <div class="cent">
+        <a href="/criaGerenteNaoAtribuido" class="voltar"><button> Criar Gerente de agência </button></a>
         <a href="/criaAgencia" class="voltar"><button> Criar agência </button></a>
+        
         <a href="/homeGerenteGeral" class="voltar"><button> Voltar </button></a>
         
         
