--- a/src/templates/criaAgencia.html
+++ b/src/templates/criaAgencia.html
@@ -44,7 +44,7 @@
     </div>
     <div>
 
-        <form action="#" method="post" class="cadastro-form">
+        <form action="#" method="post" class="altera-form">
             {% with mensagens = get_flashed_messages() %}
                 {% for msg in mensagens %}
                     <br><p id="confimacaoSenha">{{msg}}</p><br>
