--- a/src/templates/transferencia.html
+++ b/src/templates/transferencia.html
@@ -69,7 +69,7 @@
                 <h1>Insira o valor que deseja transferir:</h1>
                 <form action="" method="POST">
                     <span id="cifrão">
-                        <label for="transferencia">R$</label>
+                        <label for="transferencia">R$</label><br>
                         <input type="text" name="transferencia" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" autocomplete="off">
                         <p></p>
                         <label for="numero">Número da conta:</label>
