--- a/src/templates/criaGerente.html
+++ b/src/templates/criaGerente.html
@@ -58,7 +58,7 @@
     </div>
     <div>
         <form action="#" method="post" class="cadastro-form">
-            <h1>Cadastro</h1>
+            <h1>Criação de gerente</h1>
             {% with mensagens = get_flashed_messages() %}
                 {% for msg in mensagens %}
                     <br><p id="confimacaoSenha">{{msg}}</p><br>
