--- a/src/templates/atribuicao.html
+++ b/src/templates/atribuicao.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/static/styles/styles.css">
-    <script>
-        // pra abrir o menu
-        function abre() {
-        document.getElementById("mySidenav").style.width = "250px";
-        }
-        // pra fechar o menu
-        function fecha() {
-        document.getElementById("mySidenav").style.width = "0";
-        }
-    </script>
+            <script>
+            // pra abrir o menu
+            function abre() {
+            document.getElementById("mySidenav").style.width = "250px";
+            }
+            // pra fechar o menu
+            function fecha() {
+            document.getElementById("mySidenav").style.width = "0";
+            }
+        </script>
 </head>
 <body>
     <div class="topo">
@@ -45,7 +45,7 @@
     <div id="flexbox">
         <h1>Atribuição de gerente de agência para a agência {{linhaAgencia['nome_agencia']}}</h1>
     </div>
-    <form action="#" method="post" class="cadastro-form">
+    <form action="#" method="post" class="atribui-form">
         <select name="numero_matricula" id="estados" required>
             <option value=""></option>
             {% for linhaGerente in tabelaGerente %}
@@ -59,14 +59,13 @@
                 {% set atribuido = false %}
             {% endfor %} 
         </select><br>
-        <input type="submit" value="Atribuir gerente" id="alterar"> <br><br>
+        <input type="submit" value="Atribuir gerente" class="teste1">
         <h3>Não tem um gerente sem agência? Crie um aqui:</h3>
-        <a href="{{'/atribuindoGerente/%s' % (linhaAgencia['numero_agencia'])}}">Criar gerente</a>
-        
+        <a href="{{'/atribuindoGerente/%s' % (linhaAgencia['numero_agencia'])}}" class="voltar2"> <button> Criar gerente </button></a>
+        <br>
+        <a href="{{'/alteraAgencia/%s' % (linhaAgencia['numero_agencia'])}}" class="voltar2" ><button> Voltar </button></a>
     </form>
 </div>
-<a href="{{'/alteraAgencia/%s' % (linhaAgencia['numero_agencia'])}}" class="voltar"><button> Voltar </button></a>
-    
 </body>
 </html>
 <!-- <!DOCTYPE html>
